[FEATURE] add admins features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.password=wibietea234
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_leave_application
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 app.leaveapplication.jwt.jwt-secret=secret
 app.leaveapplication.jwt.app-name=Leave Application API
-app.leaveapplication.jwt.jwt-expiration=60
+app.leaveapplication.jwt.jwt-expiration=300
